<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical"
    tools:background="@android:color/holo_orange_dark"
    tools:visibility="visible">


    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:text="@string/connect"
        android:visibility="invisible" />
    <ImageView
        android:id="@+id/imageViewPictureUSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="1920dp"
        android:maxWidth="1080dp"
        android:contentDescription="@string/contentdescription"
        />

    <EditText
        android:id="@+id/edit_text_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|top"
        android:hint="@string/input"
        android:text="@string/txt_content"
        android:visibility="invisible"
        android:textSize="18sp"></EditText>

    <Button
        android:id="@+id/btn_alfilPOS"
        android:layout_width="287dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:text="Proceso de Documentos Electrónicos"
        android:textSize="22sp"
        android:textStyle="bold" />



    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:text="@string/btnClose"
        android:visibility="invisible"
        />





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_paper_width"
            android:visibility="invisible"
            >
        </TextView>

        <RadioButton
            android:id="@+id/width_58mm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/width1"
            android:layout_weight="0.3"
            android:visibility="invisible"/>

        <RadioButton
            android:id="@+id/width_80mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width2"
            android:visibility="invisible"/>

        <CheckBox
            android:id="@+id/checkBoxHEX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printhex"
            android:visibility="invisible"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_printcoding">
        </TextView>
        
        <RadioGroup
        android:id="@+id/radioGroupPaperSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/gbk12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gbk12"
            android:layout_marginTop="-8dip"
            android:visibility="invisible"/>

        <RadioButton
            android:id="@+id/big5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big5"
            android:layout_marginTop="-8dip"
            android:visibility="invisible"/>

         <RadioButton
            android:id="@+id/thai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thai"
            android:layout_marginTop="-8dip"
             android:visibility="invisible"/>

         <RadioButton
            android:id="@+id/kor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kor"
            android:layout_marginTop="-8dip"
             android:visibility="invisible"/>

         </RadioGroup>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAlfilPos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="960dp"
        android:maxWidth="540dp"
        android:contentDescription="@string/contentdescription"
        />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">




        <Button
            android:id="@+id/Send_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnSend"
            android:visibility="invisible"
            android:layout_weight="1.0">
        </Button>
        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_test"
            android:layout_weight="1.0"
            android:visibility="invisible"
            android:gravity="center">
        </Button>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

     </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:id="@+id/btn_prtcommand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chosecommand"
            android:layout_weight="1.0"
            android:visibility="invisible"
            android:gravity="center"
            >
        </Button>
        
        <Button
            android:id="@+id/btn_prttable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_prttable"
            android:layout_weight="1.0"
            android:gravity="center"
            android:visibility="invisible"
            >

        </Button>
       
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:id="@+id/btn_prtsma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Smallticketprinting"
            android:layout_weight="1.0"
            android:gravity="center"
            android:visibility="invisible"
            >
        </Button>
        
        <Button
            android:id="@+id/btn_prtbarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_prtcode"
            android:layout_weight="1.0"
            android:gravity="center"
            android:visibility="invisible"
            >
        </Button>
       
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/btn_scqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_scqr"
            android:layout_weight="1.0"
            android:visibility="invisible"
            android:gravity="center">
        </Button>

        <Button
            android:id="@+id/btn_dyca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dyca"
            android:layout_weight="1.0"
            android:visibility="invisible"
            android:gravity="center"
            >
        </Button>
       
    </LinearLayout>


            </LinearLayout>
    </ScrollView>

</LinearLayout>
