<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button 
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:visibility="invisible"
        />


    <EditText
        android:id="@+id/editText_Serie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:enabled="false"
        android:ems="10"
        android:gravity="center"
        android:hint="Serie"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="B001" />

    <EditText
        android:id="@+id/editText_Folio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Serie"
        android:enabled="false"
        android:ems="10"
        android:gravity="center"
        android:hint="FOLIO"
        android:inputType="textPersonName"
        android:maxLength="8"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="00000000" />


    <EditText
        android:id="@+id/editText_Ruc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Folio"
        android:ems="10"
        android:gravity="center"
        android:hint="RUC"
        android:inputType="textPersonName"
        android:maxLength="11"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="00000000" />




    <EditText
        android:id="@+id/editText_RazonSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Ruc"
        android:ems="10"
        android:gravity="center"
        android:hint="Nombre/Razon Social"
        android:inputType="textPersonName"
        android:maxLength="60"/>


    <EditText
        android:id="@+id/editText_Direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_RazonSocial"
        android:ems="10"
        android:gravity="center"
        android:hint="Direccion"
        android:inputType="textPersonName"
        android:maxLength="60"/>

    <EditText
        android:id="@+id/editText_Moneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Direccion"
        android:ems="10"
        android:gravity="center"
        android:hint="Direccion"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:text="PEN"
        />



    <EditText
        android:id="@+id/editText_Correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Moneda"
        android:ems="10"
        android:gravity="center"
        android:hint="correo electronico"
        android:inputType="textPersonName"

        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
        android:id="@+id/radioGroupPaperSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
         
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
        
                 <Button
                  android:id="@+id/Send_Button"
                  android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1.0"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:visibility="invisible"
            android:text="IMPRIMIR TICKET POS"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Modificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    android:text="Modificar"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    android:text="Detalle"></Button>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Documentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    android:text="Ir a Documentos"></Button>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Activar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="Des - Archivar Documento"></Button>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Eliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible"

                    android:text="Borrar"></Button>
            </LinearLayout>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">

     </LinearLayout>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">

     </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btn_scqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:visibility="invisible"

            android:text="@string/btn_scqr"></Button>
        
        <Button
            android:id="@+id/btn_dyca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/btn_dyca"
            android:visibility="invisible"
            ></Button>



    </LinearLayout>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClose" />

            <ImageView
                android:id="@+id/imageViewPictureUSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentdescription"
                android:maxHeight="1920dp"
                android:maxWidth="1080dp"
                android:visibility="invisible"
                 />

             </LinearLayout>
    </ScrollView>

</LinearLayout>
